--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ header {
     justify-content: center;
     align-items: center;
     color: white; /* Text color */
+    height: 100%;
+    width: 100%;
 }
 
 h1 {
@@ -113,18 +115,21 @@ p {
 }
 
 .content {
-    background-image: url("background.png");
+    /* background-image: url("background.png");
     background-position: center;
     background-repeat: repeat;
-    background-size: cover;
-    /* background-size: cover; */
-    /*background-color: #000102;  Dark blue color */
-    top: 800px;
+    background-size: cover; */
+
+    background-color: #000102;  Dark blue color
+    /* top: 800px; */
     /* height: calc(100vh + 200px); /* Full viewport height */
+    /* display: flex; */
     justify-content: center;
     align-items: center;
     color: white; /* Text color */
     padding-top: 50px;
+    margin: auto;
+    width: 100%;
 }
 
 .section {
@@ -152,6 +157,22 @@ footer {
     font-family: "Courier New";
     font-weight: normal;
     justify-self: center;
+}
+
+button {
+    padding: 10px 15px;
+    background-color: #f7931a; /* Bitcoin orange */
+    color: white; /* Text color */
+    border: none; /* Remove default border */
+    cursor: pointer; /* Change cursor to pointer on hover */
+    border-radius: 5px; /* Optional: rounded corners */
+    display: block;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+button:hover {
+    background-color: #d6811a; /* Darker shade on hover for better UX */
 }
 
 .button-container {
