--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,9 @@ button:hover {
 
 /* Mobile Styles */
 @media (max-width: 768px) {
+    h1 {
+        font-size: 3rem;
+    }
     .navbar-menu {
         display: none;
         flex-direction: column;
